[project]
name = "mcp-gauntlet"
version = "0.0.1"
description = "An agentic evaluation harness for MCP servers — can an AI agent actually accomplish real tasks with this server's tools?"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ghaleb Dweikat" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "evaluation",
    "evals",
    "agents",
    "llm",
    "anthropic",
    "claude",
]
dependencies = [
    "mcp>=1.9",
    "openai>=1.40",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "anyio>=4.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-gauntlet = "mcp_gauntlet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gauntlet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Typer's dependency-injection pattern puts Argument()/Option() calls in defaults.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
# Embedded CSS/HTML template — line length isn't a meaningful constraint here.
"src/mcp_gauntlet/htmlreport.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
